[package]
name = "informant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "informant"

[dependencies]
# My fork of ggez with the added ability to create transparent windows
winit = {version = "0.25", features = ["serde"]}
ggez = {git = "https://github.com/Cosmic-Goat/ggez"} # "0.7"
glam = { version = "0.20.5", features = ["mint"] }
keyframe = "1.0.4"
fontconfig = "0.5.0"
config = "0.13.1"
serde_derive = "1.0.137"
serde = "1.0.137"
smart-default = "0.6.0"
