[package]
name = "informant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "informant"

[dependencies]
wry = "0.18.3"
mime_guess = "2.0.4"
config = "0.13.1"
serde_derive = "1.0.137"
serde = "1.0.137"
smart-default = "0.6.0"
